--- a/index.html
+++ b/index.html
@@ -51,13 +51,17 @@
     <h4 class="parametro-senha_titulo">Numero de caracteres</h4>
     
     </div>
-    ha</title>
+    </title>
     <div class="parametro-senha">
         <h4 class="parametro-senha_titulo">características da senha</h4>
         </div>
         <div class="parametro-senha">
-            <h4 class="parametro-senha_titulo">forçla da senha</h4>
-            <div>
+            <h4 class="parametro-senha_titulo">força da senha</h4>
+            <di class="parametro-senha">
+                <h4 class="parametro-senha_titulo">características da senha </h4>
+                <div class="parametro-senha-ckeckbox">
+                    
+                </div>
  </div>
 </div>
 
